--- a/python3/form4.ipynb
+++ b/python3/form4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17"
+       "27"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Form 4 Processed: 546\n"
+      "Total Form 4 Processed: 911\n"
      ]
     }
    ],
@@ -88,35 +88,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: return json with only info needed\n",
-    "path = os.path.join(\"sec-edgar-filings\", ticker, form)\n",
-    "pattern = re.compile(\"([0-9]+)\")\n",
-    "for filingDir in os.listdir(path):\n",
-    "    fullSubmissionFname = os.path.join(path, filingDir, \"filing-details.xml\")\n",
-    "    with open(fullSubmissionFname) as xml_file:\n",
-    "        data_dict = xmltodict.parse(xml_file.read())\n",
-    "        xml_file.close()      \n",
-    "        data = {\n",
-    "            'periodOfReport': data_dict['ownershipDocument']['periodOfReport'], \n",
-    "            'reportingOwner': data_dict['ownershipDocument']['reportingOwner']['reportingOwnerRelationship'], \n",
-    "            'nonDerivativeTransaction': data_dict['ownershipDocument'][\"nonDerivativeTable\"][\"nonDerivativeTransaction\"][\"transactionCoding\"][\"transactionCode\"],\n",
-    "        }\n",
-    "        print(pd.json_normalize(data).info)"
+    "# path = os.path.join(\"sec-edgar-filings\", ticker, form)\n",
+    "# pattern = re.compile(\"([0-9]+)\")\n",
+    "# for filingDir in os.listdir(path):\n",
+    "#     fullSubmissionFname = os.path.join(path, filingDir, \"filing-details.xml\")\n",
+    "#     with open(fullSubmissionFname) as xml_file:\n",
+    "#         data_dict = xmltodict.parse(xml_file.read())\n",
+    "#         xml_file.close()      \n",
+    "#         data = {\n",
+    "#             'periodOfReport': data_dict['ownershipDocument']['periodOfReport'], \n",
+    "#             'reportingOwner': data_dict['ownershipDocument']['reportingOwner']['reportingOwnerRelationship'], \n",
+    "#             'nonDerivativeTransaction': data_dict['ownershipDocument'][\"nonDerivativeTable\"][\"nonDerivativeTransaction\"][\"transactionCoding\"][\"transactionCode\"],\n",
+    "#         }\n",
+    "#         print(pd.json_normalize(data).info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'0001209191-22-027197'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/gerardovazquez/Documents/Developer/insider-trading/form4.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gerardovazquez/Documents/Developer/insider-trading/form4.ipynb#ch0000004?line=0'>1</a>\u001b[0m \u001b[39m# TODO print(aggregates)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gerardovazquez/Documents/Developer/insider-trading/form4.ipynb#ch0000004?line=1'>2</a>\u001b[0m \u001b[39m# df = pd.DataFrame.from_dict(aggregates, orient='index')\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/gerardovazquez/Documents/Developer/insider-trading/form4.ipynb#ch0000004?line=2'>3</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mjson_normalize(aggregates\u001b[39m.\u001b[39;49mpop(\u001b[39m'\u001b[39;49m\u001b[39m0001209191-22-027197\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gerardovazquez/Documents/Developer/insider-trading/form4.ipynb#ch0000004?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(df\u001b[39m.\u001b[39minfo)\n",
+      "\u001b[0;31mKeyError\u001b[0m: '0001209191-22-027197'"
+     ]
+    }
+   ],
    "source": [
     "# TODO print(aggregates)\n",
-    "# df = pd.DataFrame.from_dict(aggregates, orient='index')\n",
-    "df = pd.json_normalize(aggregates.pop('0001209191-22-027197'))\n",
+    "df = pd.DataFrame.from_dict(aggregates, orient='index')\n",
+    "# df = pd.json_normalize(aggregates.pop('0001209191-22-027197'))\n",
     "print(df.info)"
    ]
   },
@@ -171,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2416,7 +2428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
